--- a/contact.html
+++ b/contact.html
@@ -1,76 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Website - Contact Us</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 15px 0;
-            text-align: center;
-        }
-        nav {
-            background-color: #4caf50;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px;
-            margin: 0 10px;
-        }
-        section {
-            padding: 20px;
-            margin: 20px 0;
-        }
-        h2 {
-            color: #333;
-            text-align: center;
-        }
-        form {
-            max-width: 600px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-        }
-        label {
-            display: block;
-            margin-bottom: 15px;
-            font-size: 18px;
-        }
-        input, textarea {
-            width: 100%;
-            padding: 15px;
-            margin-bottom: 20px;
-            box-sizing: border-box;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-        button {
-            background-color: #ff4081;
-            color: #fff;
-            padding: 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 100%;
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="./style/contact.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
     <header>
@@ -86,49 +26,54 @@
         <a href="register.html">Register</a>
     </nav>
 
+    <div class="contact">Contact Us</div>
     <section>
         <div class="row mb-4">
             <div class="col-md-4">
                 <div class="dbox w-100 d-flex align-items-start">
-            <div class="text">
-            <p><span>Address:</span> near kc college, colaba campus</p>
-          </div>
-      </div>
+                    <div class="text">
+                        <p><span>Address:</span> Near KC College, Colaba Campus</p>
+                    </div>
+                </div>
             </div>
             <div class="col-md-4">
                 <div class="dbox w-100 d-flex align-items-start">
-            <div class="text">
-            <p><span>Email:</span> <a href="https://formsubmit.co/el/tujije">yashusoni025@gmail.com</a></p>
-          </div>
-      </div>
+                    <div class="mailing">
+                        <i class="fa-regular fa-envelope"></i> <a
+                            href="https://formsubmit.co/el/tujije"></a>yashusoni025@gmail.com</a>
+                    </div>
+                </div>
             </div>
             <div class="col-md-4">
                 <div class="dbox w-100 d-flex align-items-start">
-            <div class="text">
-            <p><span>Phone:</span> <a href="tel://7999152068">+ 7999152068</a></p>
-          </div>
-      </div>
+                    <div class="contact">
+                        <p><i class="fa-solid fa-phone"></i><a href="tel://7999152068">+917999152068</a></p>
+                    </div>
+                </div>
             </div>
         </div>
-         <a href="https://formsubmit.co/el/tujije" style="color: wineblue;">CLICK HERE FOR ENROLLING</a>
+        <a href="https://formsubmit.co/el/tujije" style="color: wineblue;">CLICK HERE FOR ENROLLING</a>
 
         </form>
         <div class="w-100 social-media mt-5">
             <h3>Follow us here</h3>
-            <p>
-                <a href="https://www.facebook.com/focusfitness.in/">Facebook</a>
-                <a href="https://twitter.com/focusfitnessin?lang=en">Twitter</a>
-                <a href="https://www.instagram.com/focusfitness44/?igshid=YmMyMTA2M2Y%3D">Instagram</a>
-                <a href="https://dribbble.com/shots/14115182-The-Focus-Gym-Branding">Dribbble</a>
-            </p>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/focusfitness.in/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://twitter.com/focusfitnessin?lang=en"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.instagram.com/focusfitness44/?igshid=YmMyMTA2M2Y%3D"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://dribbble.com/shots/14115182-The-Focus-Gym-Branding"><i
+                        class="fa-brands fa-dribbble"></i></a>
+            </div>
         </div>
-    </div>
-</div>
-<div class="col-lg-6 d-flex align-items-stretch">
-    <div class="info-wrap w-100 p-5 img" style="background-image: url(background-image.jpg);">
-</div>
-</div>
+        </div>
+        </div>
+        <div class="col-lg-6 d-flex align-items-stretch">
+            <div class="info-wrap w-100 p-5 img" style="background-image: url(background-image.jpg);">
+            </div>
+        </div>
     </section>
 
 </body>
+
 </html>
