--- a/home.html
+++ b/home.html
@@ -3,109 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Website - Home</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f8f8;
-        }
-        header {
-            background-color: #333;
-            color:#fff;
-            padding: 15px 0;
-            text-align: center;
-        }
-        nav {
-            background-color: #4caf50;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px;
-            margin: 0 10px;
-        }
-        section {
-            padding: 20px;
-            margin: 20px 0;
-        }
-        h2 {
-            color: #333;
-        }
-        .recipe {
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 15px;
-            margin-bottom: 20px;
-        }
-        video {
-            width: 100%;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-        form {
-            max-width: 400px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        input[type="email"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            box-sizing: border-box;
-        }
-        button {
-            background-color: #4caf50;
-            color: #fff;
-            padding: 12px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-        }
-    </style>
+    <title>Recipe Maker - Home</title>
+    <link rel="stylesheet" href="./style/home.css">
 </head>
 <body>
 
     <header>
-        <h1>Recipe Website</h1>
-        <p>Discover, Cook, Enjoy!</p>
+        <h1 class="heading">Recipe Maker</h1>
+        <p class="subHeading">Discover, Cook, Enjoy!</p>
     </header>
 
     <nav>
         <a href="#">Home</a>
-        <a href="./ai-recipe-generator/index.html">Recipes</a>
+        <a href="./ai-recipe-generator/index.html" target="_blank">Recipes</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="register.html">Register</a>
     </nav>
 
-    <section>
-        <h2>Welcome to Recipe Website</h2>
-        <p>Explore our collection of mouth-watering recipes and cooking tips.</p>
-    </section>
+    <div class="container">
+        <div class="innerContainer">
+            <section class="left">
+                <h2 class="heading1">AI-Based Recipe-Maker</h2>
+                <p class="subHeading">Explore our collection of mouth-watering recipes and cooking tips.</p>
+             </section>
+    
+            <section class="right">
+                <h2>Featured Recipes</h2>
+                <div class="recipe">
+                    <h3>Spaghetti Bolognese</h3>
+                    <p>A classic Italian dish with rich tomato sauce and ground beef served over pasta.</p>
+                </div>
+                <div class="recipe">
+                    <h3>Grilled Salmon</h3>
+                    <p>Healthy and flavorful grilled salmon with a lemon and herb marinade.</p>
+                </div>
+                <!-- Add more featured recipes as needed -->
+            </section>
+        </div>
+    </div>
 
     <section>
-        <h2>Featured Recipes</h2>
-        <div class="recipe">
-            <h3>Spaghetti Bolognese</h3>
-            <p>A classic Italian dish with rich tomato sauce and ground beef served over pasta.</p>
-        </div>
-        <div class="recipe">
-            <h3>Grilled Salmon</h3>
-            <p>Healthy and flavorful grilled salmon with a lemon and herb marinade.</p>
-        </div>
-        <!-- Add more featured recipes as needed -->
-    </section>
-
-    <section>
-        <h2>Watch and Learn</h2>
+        <h2 class="heading2">Watch and Learn</h2>
         <video controls>
             <source src="sample_video.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -113,9 +52,9 @@
     </section>
 
     <section>
-        <h2>Subscribe to Our Newsletter</h2>
+        <h2 class="heading2 subscribe">Subscribe to Our Newsletter</h2>
         <form action="/subscribe" method="post">
-            <label for="email">Email:</label>
+            <label class="label" for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <button type="submit">Subscribe</button>
         </form>
