--- a/contact.html
+++ b/contact.html
@@ -13,67 +13,42 @@
 
 <body>
 
-    <header>
-        <h1>Recipe Website</h1>
-        <p>Contact Us</p>
-    </header>
 
-    <nav>
-        <a href="home.html">Home</a>
-        <a href="#">Recipes</a>
-        <a href="about.html">About</a>
-        <a href="#">Contact</a>
-        <a href="register.html">Register</a>
-    </nav>
-
-    <div class="contact">Contact Us</div>
-    <section>
-        <div class="row mb-4">
-            <div class="col-md-4">
-                <div class="dbox w-100 d-flex align-items-start">
-                    <div class="text">
-                        <p><span>Address:</span> Near KC College, Colaba Campus</p>
+    <!-- Contact Me -->
+    <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Get In Touch</h1>
+                    <h3>Want to get in touch? We'd love to hear from you. Here's how you can reach us.....</h3>
+                    <p><i class="fa-solid fa-paper-plane"></i> yashusoni025@gmail.com</p>
+                    <p><i class="fa-solid fa-square-phone"></i> <a href="tel://7999152068">+917999152068</a></p>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/focusfitness.in/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://twitter.com/focusfitnessin?lang=en"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://www.instagram.com/focusfitness44/?igshid=YmMyMTA2M2Y%3D"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="https://dribbble.com/shots/14115182-The-Focus-Gym-Branding"><i
+                                class="fa-brands fa-dribbble"></i></a>   
                     </div>
+                
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="dbox w-100 d-flex align-items-start">
-                    <div class="mailing">
-                        <i class="fa-regular fa-envelope"></i> <a
-                            href="https://formsubmit.co/el/tujije"></a>yashusoni025@gmail.com</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="dbox w-100 d-flex align-items-start">
-                    <div class="contact">
-                        <p><i class="fa-solid fa-phone"></i><a href="tel://7999152068">+917999152068</a></p>
-                    </div>
+                <div class="contact-right">
+                    <form onsubmit="sendEmail(); reset(); return false;">
+                        <input type="text" id="name" name="Name" placeholder="Your name" required>
+                        <input type="mail" id="email" name="Email" placeholder="Your email" required>
+                        <textarea id="message" name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit" class="btn btn2">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
-        <a href="https://formsubmit.co/el/tujije" style="color: wineblue;">CLICK HERE FOR ENROLLING</a>
-
-        </form>
-        <div class="w-100 social-media mt-5">
-            <h3>Follow us here</h3>
-            <div class="social-icons">
-                <a href="https://www.facebook.com/focusfitness.in/"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://twitter.com/focusfitnessin?lang=en"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://www.instagram.com/focusfitness44/?igshid=YmMyMTA2M2Y%3D"><i
-                        class="fa-brands fa-instagram"></i></a>
-                <a href="https://dribbble.com/shots/14115182-The-Focus-Gym-Branding"><i
-                        class="fa-brands fa-dribbble"></i></a>
-            </div>
+    </div>
+    <footer>
+        <div class="copyright">
+            <p>Copyright &copy; by Yashu , Made with <i class="fa-solid fa-heart"></i> by Yashu Soni </p>
         </div>
-        </div>
-        </div>
-        <div class="col-lg-6 d-flex align-items-stretch">
-            <div class="info-wrap w-100 p-5 img" style="background-image: url(background-image.jpg);">
-            </div>
-        </div>
-    </section>
-
+    </footer>
 </body>
 
 </html>
