Contact and about us page build
done all the thing contact and about page done, Register remaining

--- a/about.html
+++ b/about.html
@@ -1,56 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe Website - About Us</title>
-    <link rel="stylesheet" href="./style/about.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style/about.css" />
+  </head>
+  <body>
 
-    <header>
-        <h1>Recipe Website</h1>
-        <p>About Us</p>
-    </header>
+    <div class="top-div">
+      <div class="story">
+        <section>
+          <h2>Our Story</h2>
+            <div class="paragraph">
+                <p>
+                    Welcome to Recipe Website, where passion for cooking meets a love
+                    for sharing delicious recipes. Our goal is to inspire and help you
+                    explore the culinary world from the comfort of your home.
+                    </p>
+                    <p>
+                        Whether you're a seasoned chef or a kitchen beginner, we've got
+                        something for everyone. Join our community and embark on a culinary
+                        journey filled with tasty adventures!
+                    </p>
+                </div>
+        </section>
+      </div>
 
-    <nav>
-        <a href="home.html">Home</a>
-        <a href="./ai-recipe-generator/index.html">Recipes</a>
-        <a href="#">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="register.html">Register</a>
-    </nav>
-
-    <section>
-        <h2>Our Story</h2>
-        <p>Welcome to Recipe Website, where passion for cooking meets a love for sharing delicious recipes. Our goal is to inspire and help you explore the culinary world from the comfort of your home.</p>
-        <p>Whether you're a seasoned chef or a kitchen beginner, we've got something for everyone. Join our community and embark on a culinary journey filled with tasty adventures!</p>
-    </section>
-
-    <section>
-        <h2>Meet Our Team</h2>
-        <div class="team-member">
-            <img src="team_member1.jpg" alt="Team Member 1" width="80" height="80">
+      <div class="Top-team">
+        <section>
+          <h2>Meet Our Team</h2>
+          <p class="text-sm text-gray-500 dark:text-gray-400">Meet the passionate individuals.</p>
+          <div class="team-member">
+            <img
+              src="team_member1.jpg"
+              alt="Team Member 1"
+              width="80"
+              height="80"
+            />
             <div>
-                <h3>Yashu Soni</h3>
-                <p>Founder & Head Chef</p>
+              <h3>Yashu Soni</h3>
+              <p>Founder & Head Chef</p>
             </div>
-        </div>
-        <div class="team-member">
-            <img src="team_member2.jpg" alt="Team Member 2" width="80" height="80">
+          </div>
+          <div class="team-member">
+            <img
+              src="team_member2.jpg"
+              alt="Team Member 2"
+              width="80"
+              height="80"
+            />
             <div>
-                <h3>admin 2</h3>
-                <p>Recipe Developer</p>
+              <h3>admin 2</h3>
+              <p>Recipe Developer</p>
             </div>
-        </div>
-        <!-- Add more team members as needed -->
-    </section>
+          </div>
+          <!-- Add more team members as needed -->
+        </section>
+      </div>
+    </div>
 
-    <section>
-        <h2>Our History</h2>
-        <p>Founded in 2024, Recipe Website started as a small blog dedicated to sharing home-cooked recipes. Over the years, it has evolved into a thriving community of food enthusiasts, with a mission to make cooking enjoyable and accessible to everyone.</p>
-        <p>Join us on this culinary adventure, and let's create and savor delicious memories together!</p>
-    </section>
-
-</body>
+    <div class="history">
+        <section>
+            <h2>Our History</h2>
+            <p>
+                Founded in 2024, Recipe Website started as a small blog dedicated to
+                sharing home-cooked recipes. Over the years, it has evolved into a
+                thriving community of food enthusiasts, with a mission to make cooking
+                enjoyable and accessible to everyone.
+            </p>
+            <p>
+            Join us on this culinary adventure, and let's create and savor delicious
+            memories together!
+          </p>
+        </section>
+    </div>
+  </body>
 </html>
