--- a/contact.html
+++ b/contact.html
@@ -33,20 +33,20 @@
                     </div>
                 
                 </div>
-                <div class="contact-right">
+                <!-- <div class="contact-right">
                     <form onsubmit="sendEmail(); reset(); return false;">
                         <input type="text" id="name" name="Name" placeholder="Your name" required>
                         <input type="mail" id="email" name="Email" placeholder="Your email" required>
                         <textarea id="message" name="Message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn2">Submit</button>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
-    </div>
+    </  div>
     <footer>
         <div class="copyright">
-            <p>Copyright &copy; by Yashu , Made with <i class="fa-solid fa-heart"></i> by Yashu Soni </p>
+            <p>Copyright &copy; by Yashu , Made with <i class="fa-solid fa-heart"></i> by Team </p>
         </div>
     </footer>
 </body>
